--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "editor.colorDecorators": false
+    "editor.colorDecorators": false,
+    "compile-hero.disable-compile-files-on-did-save-code": true
 }
